Completely rewrote structure icon rendering to use Babylon.js 3D rendering like inventory icons

--- a/src/components/StructureIcon.css
+++ b/src/components/StructureIcon.css
@@ -47,6 +47,8 @@
   height: 100%;
   object-fit: contain;
   image-rendering: pixelated;
+  border-radius: 5px;
+  background-color: transparent;
 }
 
 .structure-icon-placeholder {
